--- a/dentist/src/styles.css
+++ b/dentist/src/styles.css
@@ -1,19 +1,59 @@
+* {
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
+}
+
+body {
+	font-family: "Lato", "Calibri";
+}
+
+.nav-list {
+	margin-right: 75px;
+	margin-top: 20px;
+}
+.nav-item {
+	height: 30px;
+	padding: 15px;
+	margin: 10px;
+	float: right;
+	position: relative;
+	display: inline-block;
+	background-color: lightgray;
+	border-radius: 15px;
+	font-size: 1.3em;
+	color: white;
+	text-decoration: none;
+}
+
+.nav-item:hover {
+	background-color: lightcyan;
+	color: grey;
+	font-weight: 800;
+}
+
+.content-box {
+	padding: 30px;
+	width: 80vw;
+	margin: 100px 50px 50px 50px;
+	position: absolute;
+	border-radius: 15px;
+	border: 4px lightgray solid;
+	background-color: lightcyan;
+}
 .App {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+	text-align: center;
 }
 
 ul.procedures {
-  flex-direction: column;
-  list-style: bullet;
+	flex-direction: column;
+	list-style: bullet;
 }
 
 a {
-  padding: 25px;
-  font-size: 1.3em;
-  text-decoration: none;
 }
 
 h1 {
-  font-size: 32px;
+	font-size: 32px;
+	color: darkgrey;
 }
