updated css style

--- a/random-gif/src/App.css
+++ b/random-gif/src/App.css
@@ -1,5 +1,7 @@
 /* .App {
 	position: relative;
+  justify-content:center;
+  align-items: center;
 } */
 
 .App {
@@ -8,10 +10,7 @@
 	overflow: auto;
 	margin: 5%;
 	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+
 	border: 5px lightskyblue solid;
 	border-radius: 20px;
 	font-size: larger;
