--- a/random-gif/src/index.css
+++ b/random-gif/src/index.css
@@ -4,3 +4,78 @@ body {
 	font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
 		"Droid Sans", "Helvetica Neue";
 }
+
+/* .App {
+	position: relative;
+  justify-content:center;
+  align-items: center;f15bb5
+} */
+
+.App {
+	width: 80%;
+	height: 80%;
+	overflow: auto;
+	margin: 5%;
+	position: absolute;
+
+	border: 5px #9b5de5 solid;
+	border-radius: 20px;
+	font-size: larger;
+}
+
+.App-header {
+	background-color: #9b5de5;
+	color: white;
+	padding: 5px;
+	text-align: center;
+	margin: 0px;
+}
+
+.flex-container {
+	display: flex;
+	flex-direction: row;
+	font-size: 30px;
+	text-align: center;
+}
+
+.flex-item-1 {
+	border: 2px solid #d3b9f4;
+	border-radius: 5px;
+	flex: 50%;
+	justify-content: center;
+	align-items: center;
+	padding: 5px 1%;
+	margin: 10px 20% 10px 20%;
+	width: 50vw;
+}
+
+.flex-item-2 {
+	border: 2px solid #d3b9f4;
+	border-radius: 5px;
+	background-color: #d3b9f4;
+	color: white;
+	flex: 50%;
+	padding: 5px 5%;
+	margin: 5px 30% 10px 30%;
+	width: 30vw;
+}
+
+/* Responsive layout - makes a one column-layout instead of two-column layout */
+@media (max-width: 800px) {
+	.flex-container {
+		flex-direction: column;
+	}
+}
+
+.Input {
+	position: relative;
+
+	display: flex;
+}
+
+.btn {
+	width: 30vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
