--- a/random-gif/src/index.css
+++ b/random-gif/src/index.css
@@ -5,19 +5,12 @@ body {
 		"Droid Sans", "Helvetica Neue";
 }
 
-/* .App {
-	position: relative;
-  justify-content:center;
-  align-items: center;f15bb5
-} */
-
 .App {
 	width: 80%;
 	height: 80%;
 	overflow: auto;
 	margin: 5%;
 	position: absolute;
-
 	border: 5px #9b5de5 solid;
 	border-radius: 20px;
 	font-size: larger;
@@ -34,47 +27,85 @@ body {
 .flex-container {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	font-size: 30px;
+	text-align: center;
+	justify-content: space-around;
 	text-align: center;
 }
 
 .flex-item-1 {
 	border: 2px solid #d3b9f4;
-	border-radius: 5px;
-	flex: 50%;
+	border-radius: 10px;
+	order: 1;
+	flex-grow: 2;
 	justify-content: center;
 	align-items: center;
-	padding: 5px 1%;
-	margin: 5px 20% 10px 20%;
-	width: 50vw;
+	margin: 20px 5px 5px 20px;
+	text-align: center;
 }
 
 .flex-item-2 {
-	border: 2px solid #d3b9f4;
-	border-radius: 5px;
 	background-color: #d3b9f4;
 	color: white;
-	flex: 50%;
+	border: 2px solid #d3b9f4;
+	border-radius: 10px;
+	order: 2;
+	flex-grow: 0.5;
+	margin: 20px 20px 5px 5px;
+	height: 5vh;
+	text-align: center;
+}
+
+.flex-item-3 {
+	border: 2px solid #d3b9f4;
+	border-radius: 10px;
+	color: white;
+	order: 2;
 	padding: 5px 5%;
 	margin: 5px 30% 10px 30%;
 	width: 30vw;
+	height: 5vh;
+	justify-content: space-around;
+
+	background-color: #663dff;
+	background-image: linear-gradient(
+		319deg,
+		#663dff 0%,
+		#aa00ff 40%,
+		#cc4499 100%
+	);
+}
+
+img {
+	border-radius: 1em;
+	object-fit: cover;
+	max-width: 40vw;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.RandGif {
+	display: flex;
+	position: relative;
+	margin: 50px auto;
+}
+
+.flex-item-2:hover,
+.flex-item-3:hover {
+	background-color: #0005ff;
+	background-image: linear-gradient(
+		319deg,
+		#0005ff 0%,
+		#ff1493 55%,
+		#ffee00 100%
+	);
 }
 
 @media (max-width: 800px) {
 	.flex-container {
 		flex-direction: column;
+		height: 10vh;
+		display: block;
 	}
-}
-
-.Input {
-	position: relative;
-
-	display: flex;
-}
-
-.btn {
-	width: 30vw;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
