--- a/random-gif/src/index.css
+++ b/random-gif/src/index.css
@@ -80,7 +80,7 @@ body {
 img {
 	border-radius: 1em;
 	object-fit: cover;
-	width: 20%;
+	width: 35vw;
 	margin-left: auto;
 	margin-right: auto;
 }
