--- a/react-movie/src/Components/Search.css
+++ b/react-movie/src/Components/Search.css
@@ -6,7 +6,7 @@
 
 .searchTerm {
 	width: 100%;
-	border: 3px solid rgb(250, 250, 141);
+	border: 3px solid dimgray;
 	border-right: none;
 	padding: 5px;
 	height: 20px;
@@ -16,14 +16,14 @@
 }
 
 .searchTerm:focus {
-	color: rgb(250, 250, 141);
+	color: dimgray;
 }
 
 .searchButton {
 	width: 40px;
 	height: 36px;
-	border: 1px solid rgb(250, 250, 141);
-	background: rgb(250, 250, 141);
+	border: 1px solid dimgray;
+	background: dimgray;
 	text-align: center;
 	color: #fff;
 	border-radius: 0 5px 5px 0;
