--- a/react-movie/src/index.css
+++ b/react-movie/src/index.css
@@ -28,7 +28,27 @@ body {
 	text-align: center;
 	font-size: 25px;
 	font-weight: 700;
+	display: inline-flex;
 }
+
+nav {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+ul.nav-list {
+	list-style-type: none;
+	display: flex;
+}
+.nav-item {
+	font-family:  Geneva, Verdana, sans-serif;
+	font-size: 0.8rem;
+	align-items: flex-end;
+	float: inline-end;
+	padding-left: 40px;
+}
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
