--- a/react-movie/src/index.css
+++ b/react-movie/src/index.css
@@ -17,8 +17,8 @@ body {
 }
 
 .App {
-	border: 2px white solid;
-	background: rgba(255, 255, 255, 0.3);
+	/* border: 2px white solid; */
+	/* background: rgba(255, 255, 255, 0.3); */
 	height: 90vh;
 	width: 90vw;
 	border-radius: 20px;
