--- a/react-movie/src/App.css
+++ b/react-movie/src/App.css
@@ -1,7 +1,7 @@
 img {
-	width: 150px;
+	width: 120px;
 	height: auto;
-	object-fit: fill;
+	object-fit: cover;
 }
 
 .movielist {
@@ -9,7 +9,7 @@ img {
 	max-width: 1170px;
 	display: flex;
 	flex-wrap: wrap;
-	color: rgb(50, 50, 50);
+	color: dimgray;
 }
 
 @media screen and (min-width: 768px) {
